# science-paper-linkedin-post

./: .gitignore  Dockerfile  README.md  agi_client_factory.py  arxiv_paper_processor.py  linkedin_post.txt  linkedin_post_generator.py  linkedin_posts.json  main.py  paper.py  processed_papers.json  pyproject.toml  text_processor.py
output/: linkedin_posts.json  processed_papers.json
utils/: agi_client_factory.py  arxiv_paper_processor.py  arxiv_paper_summarizer.py  cli.py  linkedin_post_generator.py  paper.py
utils/models/: claude_models.py  ollama_models.py  openai_models.py
